// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`barchartPresetsSupplier preset count by data returns 3 presets when data has a single number field 1`] = `
[
  {
    "cardOptions": {
      "previewModifier": [Function],
    },
    "fieldConfig": {
      "defaults": {
        "color": {
          "mode": "palette-classic",
        },
        "custom": {
          "fillOpacity": 100,
          "gradientMode": "none",
          "lineWidth": 0,
        },
      },
      "overrides": [],
    },
    "name": "Palette classic",
    "options": {
      "barRadius": 0.05,
      "barWidth": 0.95,
      "groupWidth": 0.8,
      "stacking": "none",
      "xField": "time",
      "xTickLabelSpacing": 100,
    },
  },
  {
    "cardOptions": {
      "previewModifier": [Function],
    },
    "fieldConfig": {
      "defaults": {
        "color": {
          "fixedColor": "#ad46ff",
          "mode": "fixed",
        },
        "custom": {
          "fillOpacity": 100,
          "gradientMode": "hue",
          "lineWidth": 1,
        },
      },
      "overrides": [],
    },
    "name": "Fixed purple hue",
    "options": {
      "barRadius": 0,
      "barWidth": 0.9,
      "groupWidth": 0.8,
      "stacking": "none",
      "xField": "time",
      "xTickLabelSpacing": 100,
    },
  },
  {
    "cardOptions": {
      "previewModifier": [Function],
    },
    "fieldConfig": {
      "defaults": {
        "color": {
          "mode": "continuous-viridis",
        },
        "custom": {
          "fillOpacity": 100,
          "gradientMode": "hue",
          "lineWidth": 1,
        },
      },
      "overrides": [],
    },
    "name": "Viridis hue",
    "options": {
      "barRadius": 0,
      "barWidth": 0.9,
      "groupWidth": 0.8,
      "stacking": "none",
      "xField": "time",
      "xTickLabelSpacing": 100,
    },
  },
]
`;

exports[`barchartPresetsSupplier preset count by data returns 3 presets when dataSummary is undefined 1`] = `
[
  {
    "cardOptions": {
      "previewModifier": [Function],
    },
    "fieldConfig": {
      "defaults": {
        "color": {
          "mode": "palette-classic",
        },
        "custom": {
          "fillOpacity": 100,
          "gradientMode": "none",
          "lineWidth": 0,
        },
      },
      "overrides": [],
    },
    "name": "Palette classic",
    "options": {
      "barRadius": 0.05,
      "barWidth": 0.95,
      "groupWidth": 0.8,
      "stacking": "none",
      "xField": "time",
      "xTickLabelSpacing": 100,
    },
  },
  {
    "cardOptions": {
      "previewModifier": [Function],
    },
    "fieldConfig": {
      "defaults": {
        "color": {
          "fixedColor": "#ad46ff",
          "mode": "fixed",
        },
        "custom": {
          "fillOpacity": 100,
          "gradientMode": "hue",
          "lineWidth": 1,
        },
      },
      "overrides": [],
    },
    "name": "Fixed purple hue",
    "options": {
      "barRadius": 0,
      "barWidth": 0.9,
      "groupWidth": 0.8,
      "stacking": "none",
      "xField": "time",
      "xTickLabelSpacing": 100,
    },
  },
  {
    "cardOptions": {
      "previewModifier": [Function],
    },
    "fieldConfig": {
      "defaults": {
        "color": {
          "mode": "continuous-viridis",
        },
        "custom": {
          "fillOpacity": 100,
          "gradientMode": "hue",
          "lineWidth": 1,
        },
      },
      "overrides": [],
    },
    "name": "Viridis hue",
    "options": {
      "barRadius": 0,
      "barWidth": 0.9,
      "groupWidth": 0.8,
      "stacking": "none",
      "xField": "time",
      "xTickLabelSpacing": 100,
    },
  },
]
`;

exports[`barchartPresetsSupplier preset count by data returns 4 presets when data has multiple number fields 1`] = `
[
  {
    "cardOptions": {
      "previewModifier": [Function],
    },
    "fieldConfig": {
      "defaults": {
        "color": {
          "mode": "palette-classic",
        },
        "custom": {
          "fillOpacity": 100,
          "gradientMode": "none",
          "lineWidth": 0,
        },
      },
      "overrides": [],
    },
    "name": "Palette classic",
    "options": {
      "barRadius": 0.05,
      "barWidth": 0.95,
      "groupWidth": 0.8,
      "stacking": "none",
      "xField": "time",
      "xTickLabelSpacing": 100,
    },
  },
  {
    "cardOptions": {
      "previewModifier": [Function],
    },
    "fieldConfig": {
      "defaults": {
        "color": {
          "fixedColor": "#ad46ff",
          "mode": "fixed",
        },
        "custom": {
          "fillOpacity": 100,
          "gradientMode": "hue",
          "lineWidth": 1,
        },
      },
      "overrides": [],
    },
    "name": "Fixed purple hue",
    "options": {
      "barRadius": 0,
      "barWidth": 0.9,
      "groupWidth": 0.8,
      "stacking": "none",
      "xField": "time",
      "xTickLabelSpacing": 100,
    },
  },
  {
    "cardOptions": {
      "previewModifier": [Function],
    },
    "fieldConfig": {
      "defaults": {
        "color": {
          "mode": "continuous-viridis",
        },
        "custom": {
          "fillOpacity": 100,
          "gradientMode": "hue",
          "lineWidth": 1,
        },
      },
      "overrides": [],
    },
    "name": "Viridis hue",
    "options": {
      "barRadius": 0,
      "barWidth": 0.9,
      "groupWidth": 0.8,
      "stacking": "none",
      "xField": "time",
      "xTickLabelSpacing": 100,
    },
  },
  {
    "cardOptions": {
      "previewModifier": [Function],
    },
    "fieldConfig": {
      "defaults": {
        "color": {
          "mode": "palette-classic",
        },
        "custom": {
          "fillOpacity": 100,
          "gradientMode": "none",
          "lineWidth": 0,
        },
      },
      "overrides": [],
    },
    "name": "Palette classic stacked",
    "options": {
      "barRadius": 0.05,
      "barWidth": 0.95,
      "groupWidth": 0.8,
      "stacking": "normal",
      "xField": "time",
      "xTickLabelSpacing": 100,
    },
  },
]
`;

exports[`barchartPresetsSupplier preset structure each preset has name, options, fieldConfig, and cardOptions with previewModifier 1`] = `
[
  {
    "cardOptions": {
      "previewModifier": [Function],
    },
    "fieldConfig": {
      "defaults": {
        "color": {
          "mode": "palette-classic",
        },
        "custom": {
          "fillOpacity": 100,
          "gradientMode": "none",
          "lineWidth": 0,
        },
      },
      "overrides": [],
    },
    "name": "Palette classic",
    "options": {
      "barRadius": 0.05,
      "barWidth": 0.95,
      "groupWidth": 0.8,
      "stacking": "none",
      "xField": "time",
      "xTickLabelSpacing": 100,
    },
  },
  {
    "cardOptions": {
      "previewModifier": [Function],
    },
    "fieldConfig": {
      "defaults": {
        "color": {
          "fixedColor": "#ad46ff",
          "mode": "fixed",
        },
        "custom": {
          "fillOpacity": 100,
          "gradientMode": "hue",
          "lineWidth": 1,
        },
      },
      "overrides": [],
    },
    "name": "Fixed purple hue",
    "options": {
      "barRadius": 0,
      "barWidth": 0.9,
      "groupWidth": 0.8,
      "stacking": "none",
      "xField": "time",
      "xTickLabelSpacing": 100,
    },
  },
  {
    "cardOptions": {
      "previewModifier": [Function],
    },
    "fieldConfig": {
      "defaults": {
        "color": {
          "mode": "continuous-viridis",
        },
        "custom": {
          "fillOpacity": 100,
          "gradientMode": "hue",
          "lineWidth": 1,
        },
      },
      "overrides": [],
    },
    "name": "Viridis hue",
    "options": {
      "barRadius": 0,
      "barWidth": 0.9,
      "groupWidth": 0.8,
      "stacking": "none",
      "xField": "time",
      "xTickLabelSpacing": 100,
    },
  },
]
`;

exports[`barchartPresetsSupplier previewModifier sets legend, axisPlacement, and barWidth 1`] = `
{
  "fieldConfig": {
    "defaults": {
      "custom": {
        "axisPlacement": "hidden",
      },
    },
    "overrides": [],
  },
  "options": {
    "barWidth": 0.8,
    "legend": {
      "calcs": [],
      "displayMode": "hidden",
      "placement": "right",
      "showLegend": false,
    },
  },
}
`;
